Fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ h1 {
 
 .logo {
   max-width: 100px;
+  margin: auto;
 }
 
 .coming-soon {
